Fix z-index on background image

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -38,6 +38,7 @@ p {
 
 .background {
   position: fixed;
+  z-index: -1;
   top: -36px;
   left: 50%;
   background-image: url(./assets/background.png);
